base/rook/cluster/manifests/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph-dashboard-http
  namespace: rook-ceph
spec:
  parentRefs:
    - name: pelindung-bumi-gateway
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - ceph.placeholder.example.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph-dashboard-https
  namespace: rook-ceph
spec:
  parentRefs:
    - name: pelindung-bumi-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - ceph.placeholder.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rook-ceph-mgr-dashboard
          namespace: rook-ceph
          port: 7000
